syntax = "proto3";

package chat;

service ChatService {
    rpc CreateChat(ChatCreateDto) returns (Chat) {}
    rpc GetAllChats(Empty) returns (Chats) {}
    rpc GetChatById(FindChat) returns (Chat) {}
}

message User{
    string name = 1;
    string displayName = 3;
    string status = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
}

message ChatCreateDto {
    string senderId = 1;
    string receiveId = 2;
    optional string chatId = 3;
}

message Chat {
    string id = 1;
    string senderId = 2;
    string receiveId = 3;
    User receiveUser = 4;
}

message Chats {
    repeated Chat chats = 1;
}

message Empty {}

message FindChat {
    string id = 1;
}
